--- a/analysis/Makefile
+++ b/analysis/Makefile
@@ -6,8 +6,12 @@ model:
 	mkdir model_result
 	cp results/* model_result/
 
+requirements:
+	python3 -m pip install -r requirements.txt
+
 .DEFAULT: 
 	@echo "No such command found."
 	@echo "Run 'make' or 'make plots' for plotting graphs."
+	@echo "Run 'make requirements' to download the requirements for python."
 
-.SILENT: model
+.SILENT: model requirements
